<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.PostFragment">

    <EditText
        android:id="@+id/taskAddress"
        android:layout_width="279dp"
        android:layout_height="40dp"
        android:background="@drawable/search_view_shape"
        android:ems="10"
        android:hint="Address"
        android:inputType="textPersonName"
        android:queryBackground="@null"
        android:submitBackground="@null"
        android:textSize="20sp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskWage"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:background="@drawable/search_view_shape"
        android:ems="10"
        android:hint=" Wage"
        android:inputType="number"
        android:queryBackground="@null"
        android:submitBackground="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003" />

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="279dp"
        android:layout_height="40dp"
        android:background="@drawable/search_view_shape"
        android:ems="10"
        android:hint=" Task Title"
        android:inputType="textPersonName"
        android:queryBackground="@null"
        android:submitBackground="@null"
        android:textSize="24sp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/postBtn"
        android:layout_width="288dp"
        android:layout_height="80dp"
        android:text="POST"
        app:backgroundTint="#FF32A79D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="279dp"
        android:layout_height="175dp"
        android:background="@drawable/search_view_shape"
        android:ems="10"
        android:gravity="start|top"
        android:hint="\n\n\n                Description"
        android:inputType="textMultiLine"
        android:queryBackground="@null"
        android:submitBackground="@null"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:background="@drawable/search_view_shape"
        android:enabled="false"
        android:hint=" Date"
        android:queryBackground="@null"
        android:submitBackground="@null"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/selectDate"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Select"
        app:backgroundTint="#FF32A79D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/postStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="317dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>