...
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Login">Login</string>
    <string name="logoutBtn">Logout</string>
    <string name="post">Post</string>
    <string name="post_tasks">Post Tasks</string>
    <string name="my_post">My Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_mypost">My Post</string>
    <string name="label_post">Post Your Tasks</string>
    <string name="title_activity_maps">Map</string>
...
